Fix(web): Prevent content with z-index from overlapping during Drawer closing #DS-2066

--- a/packages/web/src/scss/components/Modal/_ModalDialog.scss
+++ b/packages/web/src/scss/components/Modal/_ModalDialog.scss
@@ -82,7 +82,7 @@
     }
 }
 
-[open] > .ModalDialog--dockOnMobile {
+.is-open > .ModalDialog--dockOnMobile {
     @include breakpoint.down(map.get(theme.$breakpoints, tablet)) {
         --modal-translate-y: 0;
     }
